// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    data-testid="loading_spinner"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-123"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-121"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-140"
        >
          <div
            class="MuiBox-root MuiBox-root-141"
          >
            <div
              class="MuiBox-root MuiBox-root-142"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-143"
            >
              <h1
                class="MuiBox-root MuiBox-root-144 makeStyles-projectTitle-126"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-145"
            >
              <div
                class="MuiBox-root MuiBox-root-146"
              >
                <div
                  class="MuiChip-root makeStyles-chip-133 makeStyles-chipNotAPriority-139 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-147"
              >
                <div
                  class="MuiChip-root makeStyles-chip-133 makeStyles-chipActive-134 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Active
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-148 makeStyles-projectMetadata-128"
          >
            <section
              class="MuiBox-root MuiBox-root-149"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-150"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-151"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-152"
              >
                <dl
                  class="MuiBox-root MuiBox-root-153"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      ---
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-154"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-155"
              >
                <ul
                  class="makeStyles-projectContactList-156"
                >
                  <li
                    class="MuiBox-root MuiBox-root-158"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-159"
                    >
                      <svg
                        class="makeStyles-contactIcon-157"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                          <sup>
                            <span
                              class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                            >
                               Primary
                            </span>
                          </sup>
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-160"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-161"
              >
                <ul
                  class="makeStyles-projectPermitList-162"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-163"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-164"
              >
                <ul
                  class="makeStyles-projectIucnList-165"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-166"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-167"
              >
                <ul
                  class="makeStyles-projectFundingList-168"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-169"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-170"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-171"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-172"
              >
                <dl
                  class="MuiBox-root MuiBox-root-174"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-173"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-173"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-173"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-173"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-175 makeStyles-projectDetailMain-122"
    >
      <div
        class="MuiBox-root MuiBox-root-176"
      >
        <div
          class="MuiBox-root MuiBox-root-177"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-178 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_67"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-7"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-5"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-24"
        >
          <div
            class="MuiBox-root MuiBox-root-25"
          >
            <div
              class="MuiBox-root MuiBox-root-26"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-27"
            >
              <h1
                class="MuiBox-root MuiBox-root-28 makeStyles-projectTitle-10"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-29"
            >
              <div
                class="MuiBox-root MuiBox-root-30"
              >
                <div
                  class="MuiChip-root makeStyles-chip-17 makeStyles-chipNotAPriority-23 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-31"
              >
                <div
                  class="MuiChip-root makeStyles-chip-17 makeStyles-chipActive-18 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Active
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-32 makeStyles-projectMetadata-12"
          >
            <section
              class="MuiBox-root MuiBox-root-33"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-34"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-35"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-36"
              >
                <dl
                  class="MuiBox-root MuiBox-root-37"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2100
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-38"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-39"
              >
                <ul
                  class="makeStyles-projectContactList-40"
                >
                  <li
                    class="MuiBox-root MuiBox-root-42"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-43"
                    >
                      <svg
                        class="makeStyles-contactIcon-41"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                          <sup>
                            <span
                              class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                            >
                               Primary
                            </span>
                          </sup>
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-44"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-45"
              >
                <ul
                  class="makeStyles-projectPermitList-46"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-47"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-48"
              >
                <ul
                  class="makeStyles-projectIucnList-49"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-50"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-51"
              >
                <ul
                  class="makeStyles-projectFundingList-52"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-53"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-54"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-55"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-56"
              >
                <dl
                  class="MuiBox-root MuiBox-root-58"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-57"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-57"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-57"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-57"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-59 makeStyles-projectDetailMain-6"
    >
      <div
        class="MuiBox-root MuiBox-root-60"
      >
        <div
          class="MuiBox-root MuiBox-root-61"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-62 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_35"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-65"
    data-testid="view_project_page_component"
  >
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-projectDetailDrawer-63"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
      >
        <div
          class="MuiBox-root MuiBox-root-82"
        >
          <div
            class="MuiBox-root MuiBox-root-83"
          >
            <div
              class="MuiBox-root MuiBox-root-84"
            >
              <a
                aria-disabled="false"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall MuiTypography-colorPrimary"
                role="button"
                tabindex="0"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeSmall"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Back to Projects
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              class="MuiBox-root MuiBox-root-85"
            >
              <h1
                class="MuiBox-root MuiBox-root-86 makeStyles-projectTitle-68"
              >
                <b>
                  Project -
                </b>
                 Test Project Name
              </h1>
            </div>
            <div
              class="MuiBox-root MuiBox-root-87"
            >
              <div
                class="MuiBox-root MuiBox-root-88"
              >
                <div
                  class="MuiChip-root makeStyles-chip-75 makeStyles-chipNotAPriority-81 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Priority
                  </span>
                </div>
              </div>
              <div
                class="MuiBox-root MuiBox-root-89"
              >
                <div
                  class="MuiChip-root makeStyles-chip-75 makeStyles-chipPublishedCompleted-77 MuiChip-sizeSmall"
                >
                  <span
                    class="MuiChip-label MuiChip-labelSmall"
                  >
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-90 makeStyles-projectMetadata-70"
          >
            <section
              class="MuiBox-root MuiBox-root-91"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Objectives
              </h3>
              <div
                class="MuiBox-root MuiBox-root-92"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Project objectives
                </p>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-93"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                General Information
              </h3>
              <div
                class="MuiBox-root MuiBox-root-94"
              >
                <dl
                  class="MuiBox-root MuiBox-root-95"
                  data-testid="general_info_component"
                >
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Project Name:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Test Project Name
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Start Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Oct 10, 1998
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Completion Date:
                    </dd>
                    <dt
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      Feb 26, 2021
                    </dt>
                  </div>
                  <div>
                    <dd
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                    >
                      Focal Species:
                    </dd>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    />
                  </div>
                </dl>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-96"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
              >
                Project Contacts
              </h3>
              <div
                class="MuiBox-root MuiBox-root-97"
              >
                <ul
                  class="makeStyles-projectContactList-98"
                >
                  <li
                    class="MuiBox-root MuiBox-root-100"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-101"
                    >
                      <svg
                        class="makeStyles-contactIcon-99"
                        role="presentation"
                        style="width: 2.25rem; height: 2.25rem;"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M7.07,18.28C7.5,17.38 10.12,16.5 12,16.5C13.88,16.5 16.5,17.38 16.93,18.28C15.57,19.36 13.86,20 12,20C10.14,20 8.43,19.36 7.07,18.28M18.36,16.83C16.93,15.09 13.46,14.5 12,14.5C10.54,14.5 7.07,15.09 5.64,16.83C4.62,15.5 4,13.82 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,13.82 19.38,15.5 18.36,16.83M12,6C10.06,6 8.5,7.56 8.5,9.5C8.5,11.44 10.06,13 12,13C13.94,13 15.5,11.44 15.5,9.5C15.5,7.56 13.94,6 12,6M12,11A1.5,1.5 0 0,1 10.5,9.5A1.5,1.5 0 0,1 12,8A1.5,1.5 0 0,1 13.5,9.5A1.5,1.5 0 0,1 12,11Z"
                          style="fill: currentColor;"
                        />
                      </svg>
                    </div>
                    <div>
                      <div>
                        <strong
                          data-testid="contact_name"
                        >
                           Amanda Christensen
                          <sup>
                            <span
                              class="MuiTypography-root MuiTypography-caption MuiTypography-colorTextSecondary"
                            >
                               Primary
                            </span>
                          </sup>
                        </strong>
                      </div>
                      <div>
                        <a
                          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                          href="#"
                        >
                          amanda@christensen.com
                        </a>
                      </div>
                      <div>
                        Amanda and associates
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-102"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="projectPermitsTitle"
              >
                Permits
              </h3>
              <div
                class="MuiBox-root MuiBox-root-103"
              >
                <ul
                  class="makeStyles-projectPermitList-104"
                >
                  <li
                    data-testid="permit_item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      123 - 
                      <span>
                        Permit type
                      </span>
                    </span>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-105"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="IUCNTitle"
              >
                IUCN Conservation Actions Classifications
              </h3>
              <div
                class="MuiBox-root MuiBox-root-106"
              >
                <ul
                  class="makeStyles-projectIucnList-107"
                >
                  <li
                    data-testid="iucn_data"
                  >
                    IUCN class &gt; IUCN subclass 1 &gt; IUCN subclass 2
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-108"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="fundingSourcesTitle"
              >
                Funding Sources
              </h3>
              <div
                class="MuiBox-root MuiBox-root-109"
              >
                <ul
                  class="makeStyles-projectFundingList-110"
                >
                  <li
                    data-testid="funding_data"
                  >
                    <div
                      class="MuiBox-root MuiBox-root-111"
                    >
                      <strong
                        data-testid="agencyTitle"
                      >
                        agency name
                      </strong>
                    </div>
                    <dl
                      class="MuiBox-root MuiBox-root-112"
                    >
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Funding Amount:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          $333
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Project ID:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          ABC123
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          Start Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 14, 2000
                        </dt>
                      </div>
                      <div>
                        <dt
                          class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                        >
                          End Date:
                        </dt>
                        <dt
                          class="MuiTypography-root MuiTypography-body2"
                        >
                          Apr 13, 2021
                        </dt>
                      </div>
                    </dl>
                  </li>
                </ul>
              </div>
            </section>
            <hr
              class="MuiDivider-root"
            />
            <section
              class="MuiBox-root MuiBox-root-113"
            >
              <h3
                class="MuiTypography-root MuiTypography-body1"
                data-testid="partnershipsTitle"
              >
                Partnerships
              </h3>
              <div
                class="MuiBox-root MuiBox-root-114"
              >
                <dl
                  class="MuiBox-root MuiBox-root-116"
                >
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="indigenousData"
                    >
                      Indigenous Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-115"
                        data-testid="indigenous_partners_data"
                      >
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-115"
                        data-testid="indigenous_partners_data"
                      >
                        First nations code
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                  <div>
                    <dt
                      class="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextSecondary"
                      data-testid="stakeholderData"
                    >
                      Other Partnerships
                    </dt>
                    <dd
                      class="MuiTypography-root MuiTypography-body2"
                    >
                      <span
                        class="makeStyles-partnerItem-115"
                        data-testid="stakeholder_partners_data"
                      >
                        partner2
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                      <span
                        class="makeStyles-partnerItem-115"
                        data-testid="stakeholder_partners_data"
                      >
                        partner3
                        <span
                          class="seperator"
                        >
                          , 
                        </span>
                      </span>
                    </dd>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-117 makeStyles-projectDetailMain-64"
    >
      <div
        class="MuiBox-root MuiBox-root-118"
      >
        <div
          class="MuiBox-root MuiBox-root-119"
          data-testid="map_container"
        >
          <div
            class="makeStyles-map-120 leaflet-container leaflet-grab leaflet-touch-drag"
            id="project_location_form_map"
            style="position: relative;"
            tabindex="0"
          >
            <div
              class="leaflet-pane leaflet-map-pane"
              style="left: 0px; top: 0px;"
            >
              <div
                class="leaflet-pane leaflet-tile-pane"
              >
                <div
                  class="leaflet-layer "
                  style="z-index: 1;"
                >
                  <div
                    class="leaflet-tile-container leaflet-zoom-animated"
                    style="z-index: 18; left: 0px; top: 0px;"
                  >
                    <img
                      alt=""
                      class="leaflet-tile"
                      role="presentation"
                      src="https://maps.gov.bc.ca/arcgis/rest/services/province/roads_wm/MapServer/tile/5/10/4"
                      style="width: 256px; height: 256px; left: -159px; top: -31px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="leaflet-pane leaflet-shadow-pane"
              />
              <div
                class="leaflet-pane leaflet-overlay-pane"
              />
              <div
                class="leaflet-pane leaflet-marker-pane"
              />
              <div
                class="leaflet-pane leaflet-tooltip-pane"
              />
              <div
                class="leaflet-pane leaflet-popup-pane"
              />
            </div>
            <div
              class="leaflet-control-container"
            >
              <div
                class="leaflet-top leaflet-left"
              >
                <div
                  class="leaflet-control-zoom leaflet-bar leaflet-control"
                >
                  <a
                    aria-label="Zoom in"
                    class="leaflet-control-zoom-in"
                    href="#"
                    role="button"
                    title="Zoom in"
                  >
                    +
                  </a>
                  <a
                    aria-label="Zoom out"
                    class="leaflet-control-zoom-out"
                    href="#"
                    role="button"
                    title="Zoom out"
                  >
                    −
                  </a>
                </div>
                <div
                  class="leaflet-control-fullscreen leaflet-bar leaflet-control"
                >
                  <a
                    class="leaflet-control-fullscreen-button leaflet-bar-part"
                    href="#"
                    title="View Fullscreen"
                  />
                </div>
              </div>
              <div
                class="leaflet-top leaflet-right"
              />
              <div
                class="leaflet-bottom leaflet-left"
              />
              <div
                class="leaflet-bottom leaflet-right"
              >
                <div
                  aria-haspopup="true"
                  class="leaflet-control-layers leaflet-control"
                >
                  <a
                    class="leaflet-control-layers-toggle"
                    href="#"
                    title="Layers"
                  />
                  <section
                    class="leaflet-control-layers-list"
                  >
                    <div
                      class="leaflet-control-layers-base"
                    >
                      <label>
                        <div>
                          <input
                            checked="checked"
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             BC Government
                          </span>
                        </div>
                      </label>
                      <label>
                        <div>
                          <input
                            class="leaflet-control-layers-selector"
                            name="leaflet-base-layers_52"
                            type="radio"
                          />
                          <span>
                             Esri Imagery
                          </span>
                        </div>
                      </label>
                    </div>
                    <div
                      class="leaflet-control-layers-separator"
                      style="display: none;"
                    />
                    <div
                      class="leaflet-control-layers-overlays"
                    />
                  </section>
                </div>
                <div
                  class="leaflet-control-attribution leaflet-control"
                >
                  <a
                    href="https://leafletjs.com"
                    title="A JS library for interactive maps"
                  >
                    Leaflet
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
